jilles      2006/06/24 23:29:30 UTC	(20060624-5550)
  Log:
  check_modes(): clarify a bit more
  

  Changes:	Modified:
  +6 -8		trunk/src/cmode.c (File Modified) 


jilles      2006/06/24 23:22:40 UTC	(20060624-5548)
  Log:
  check_modes():
  - Use new modestacker api
  - Simplify somewhat, pretty-printing mode changes is the
    modestacker's task, not ours
  

  Changes:	Modified:
  +10 -27	trunk/src/cmode.c (File Modified) 


jilles      2006/06/24 23:08:30 UTC	(20060624-5546)
  Log:
  Add a command line option -l to change the log file.
  
  Submitted by e-axe.
  

  Changes:	Modified:
  +1 -0		trunk/include/extern.h (File Modified) 
  +12 -2	trunk/src/atheme.c (File Modified) 
  +1 -1		trunk/src/function.c (File Modified) 


jilles      2006/06/24 23:02:17 UTC	(20060624-5544)
  Log:
  check_modes(): Do not send out a mode if sendnow is false,
  a key is on the channel and a different key is mlocked.
  (This does not currently trigger because check_modes() is
  only called with false on channels which have their
  modes cleared.)
  

  Changes:	Modified:
  +2 -1		trunk/src/cmode.c (File Modified) 


jilles      2006/06/24 22:54:44 UTC	(20060624-5542)
  Log:
  channel_mode(): use new modestacker api
  

  Changes:	Modified:
  +13 -38	trunk/src/cmode.c (File Modified) 


jilles      2006/06/24 22:24:37 UTC	(20060624-5540)
  Log:
  ChanServ RECOVER: use new modestacker api
  

  Changes:	Modified:
  +11 -13	trunk/modules/chanserv/recover.c (File Modified) 


jilles      2006/06/24 22:20:47 UTC	(20060624-5538)
  Log:
  Add a new modestacker API, modestack_mode_*(),
  modestack_flush_channel(), modestack_forget_channel().
  This will allow more compile time checking and less
  futzing around with strings (e.g. constructing "-h").
  

  Changes:	Modified:
  +7 -1		trunk/include/extern.h (File Modified) 
  +64 -0	trunk/src/cmode.c (File Modified) 


jilles      2006/06/24 21:02:10 UTC	(20060624-5536)
  Log:
  hyperion doesn't have channel mode +p.
  
