@@ -4,7 +4,7 @@
  *
  * This file contains code for the CService KICK functions.
  *
- * $Id: clear_bans.c 4645 2006-01-21 22:50:25Z jilles $
+ * $Id: clear_bans.c 5554 2006-06-25 00:20:34Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"chanserv/clear_bans", FALSE, _modinit, _moddeinit,
-	"$Id: clear_bans.c 4645 2006-01-21 22:50:25Z jilles $",
+	"$Id: clear_bans.c 5554 2006-06-25 00:20:34Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -47,7 +47,6 @@ static void cs_cmd_clear_bans(char *origin, char *channel)
 	chanban_t *cb;
 	node_t *n, *tn;
 	char *item = strtok(NULL, " "), *p;
-	char mchar[3];
 	int hits;
 
 	if (item == NULL)
@@ -94,16 +93,13 @@ static void cs_cmd_clear_bans(char *origin, char *channel)
 		return;
 	}
 
-	mchar[0] = '-';
-	mchar[2] = '\0';
 	hits = 0;
 	LIST_FOREACH_SAFE(n, tn, c->bans.head)
 	{
 		cb = n->data;
 		if (!strchr(item, cb->type))
 			continue;
-		mchar[1] = cb->type;
-		cmode(chansvs.nick, c->name, mchar, cb->mask);
+		modestack_mode_param(chansvs.nick, c->name, MTYPE_DEL, cb->type, cb->mask);
 		chanban_delete(cb);
 		hits++;
 	}
