@@ -4,7 +4,7 @@
  *
  * This file contains code for the CService OP functions.
  *
- * $Id: halfop.c 4745 2006-01-31 02:26:19Z nenolod $
+ * $Id: halfop.c 5554 2006-06-25 00:20:34Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"chanserv/halfop", FALSE, _modinit, _moddeinit,
-	"$Id: halfop.c 4745 2006-01-31 02:26:19Z nenolod $",
+	"$Id: halfop.c 5554 2006-06-25 00:20:34Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -136,7 +136,7 @@ static void cs_cmd_halfop(char *origin)
 		return;
 	}
 
-	cmode(chansvs.nick, chan, "+h", CLIENT_NAME(tu));
+	modestack_mode_param(chansvs.nick, chan, MTYPE_ADD, 'h', CLIENT_NAME(tu));
 	cu->modes |= ircd->halfops_mode;
 
 	/* TODO: Add which username had access to perform the command */
@@ -211,7 +211,7 @@ static void cs_cmd_dehalfop(char *origin)
 		return;
 	}
 
-	cmode(chansvs.nick, chan, "-h", CLIENT_NAME(tu));
+	modestack_mode_param(chansvs.nick, chan, MTYPE_DEL, 'h', CLIENT_NAME(tu));
 	cu->modes &= ~ircd->halfops_mode;
 
 	/* TODO: Add which username had access to perform the command */
@@ -289,7 +289,7 @@ static void cs_fcmd_halfop(char *origin, char *chan)
 			continue;
 		}
 
-		cmode(chansvs.nick, chan, "+h", CLIENT_NAME(tu));
+		modestack_mode_param(chansvs.nick, chan, MTYPE_ADD, 'h', CLIENT_NAME(tu));
 		cu->modes |= ircd->halfops_mode;
 		logcommand(chansvs.me, u, CMDLOG_SET, "%s HALFOP %s!%s@%s", mc->name, tu->nick, tu->user, tu->vhost);
 	} while ((nick = strtok(NULL, " ")) != NULL);
@@ -353,7 +353,7 @@ static void cs_fcmd_dehalfop(char *origin, char *chan)
 			continue;
 		}
 
-		cmode(chansvs.nick, chan, "-h", CLIENT_NAME(tu));
+		modestack_mode_param(chansvs.nick, chan, MTYPE_DEL, 'h', CLIENT_NAME(tu));
 		cu->modes &= ~ircd->halfops_mode;
 		logcommand(chansvs.me, u, CMDLOG_SET, "%s DEHALFOP %s!%s@%s", mc->name, tu->nick, tu->user, tu->vhost);
 	} while ((nick = strtok(NULL, " ")) != NULL);
