@@ -1,3 +1,13 @@
+jilles      2006/06/25 00:05:27 UTC	(20060625-5552)
+  Log:
+  Use UID if appropriate when opping/halfopping/voicing
+  users added to a xOP list.
+  
+
+  Changes:	Modified:
+  +6 -6		trunk/modules/chanserv/xop.c (File Modified) 
+
+
 jilles      2006/06/24 23:29:30 UTC	(20060624-5550)
   Log:
   check_modes(): clarify a bit more
